welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value abs
    return 2* abs(n-21)
              ^diff21:5: error: not found: value abs
    return abs(n-21)
           ^